# resume-genius

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  justfile
apps/backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  alembic.ini  main.py  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0912451b33b5_fix_timezone_columns_make_all_datetime_.py  098984b5be5e_add_output_resume_models.py  58734e5510eb_add_timestamps_to_work_and_project_.py  795c10e7c423_add_job_processing_status_table.py  9b9c400107f9_make_proficiency_level_optional_in_.py  a649032e370d_change_embedding_column_from_json_to_.py  e0ca792eaffe_add_api_key_model.py  e332b8505351_add_selection_results_tables.py  e362f68a1d47_add_timestamps_to_education_table.py  f24ddb1606a6_initial_migration.py
apps/backend/docs/: jwt-authentication-flow.md  jwt-authentication-migration.md  schema_design.md
apps/backend/docs/openai-agents/: 00-main-page.md  01-quickstart.md  02-examples.md  03-agents.md  04-running-agents.md  05-sessions.md  06-results.md  07-streaming.md  08-tools.md  OpenAI Agent SDK_ A Comprehensive User Guide.md  README.md
apps/backend/integration_tests/: README.md  conftest.py  test_job_flow.py
apps/backend/playground/: extractor.ipynb  extractor_instructor.ipynb  pdf_export.ipynb  test_extraction_system.ipynb
apps/backend/scripts/: export_openapi.py  test_full_flow.py  test_job_flow_requests.py  test_job_streaming.py  test_job_streaming_with_auth.py  test_redis_direct.py  test_sse_simple.py  test_sync_job.py  test_sync_with_sse.py
apps/backend/src/: containers.py
apps/backend/src/api/: dependencies.py  main.py  middleware.py
apps/backend/src/api/routers/: auth.py  jobs.py  profile.py  resume.py  resumes.py
apps/backend/src/cli/: api_keys.py
apps/backend/src/config/: auth.py  environment.py  extraction_config.py  redis.py  settings.py
apps/backend/src/core/: db_config.py  queue_manager.py  security.py  unit_of_work.py
apps/backend/src/extractors/: __init__.py  base_extractor.py  pdf_handler.py  resume_extractor.py
apps/backend/src/extractors/components/: __init__.py  contact_extractor.py  education_extractor.py  project_extractor.py  skill_extractor.py  work_extractor.py
apps/backend/src/models/: __init__.py  base.py  enums.py  project.py  skill.py  user.py  work.py
apps/backend/src/models/api/: __init__.py  core.py  job.py  profile.py  resume.py
apps/backend/src/models/auth/: __init__.py  blacklisted_token.py  email_verification_token.py  password_reset_token.py  refresh_token.py  register.py  token.py
apps/backend/src/models/converters/: db_converters.py
apps/backend/src/models/db/: __init__.py  base.py  education.py  enums.py  project.py  skill.py  user.py  work.py
apps/backend/src/models/db/auth/: __init__.py  api_key.py  enums.py  (+6 more)
apps/backend/src/models/frontend/: education.py  project.py  skill.py  user.py  work.py
apps/backend/src/models/llm/: education.py  project.py  skill.py  user.py  work.py
apps/backend/src/models/response/: __init__.py
apps/backend/src/models/resumes/: job.py  resume.py  resume_education.py  resume_metadata.py  resume_skill.py  resume_work_experience.py
apps/backend/src/repositories/: auth_repository.py  education_repository.py  job_repository.py  project_repository.py  resume_repository.py  selection_repository.py  skill_repository.py  status_repository.py  work_repository.py
apps/backend/src/schemas/auth/: __init__.py  login.py  user.py
apps/backend/src/schemas/converters/: __init__.py  db_converters.py
apps/backend/src/schemas/frontend/: __init__.py  education.py  project.py  skill.py  user.py  work.py
apps/backend/src/schemas/llm/: __init__.py  education.py  project.py  skill.py  user.py  work.py
apps/backend/src/schemas/response/: validation.py
apps/backend/src/services/: auth_service.py  extraction_service.py  job_service.py  profile_service.py  resume_service.py  selection_service.py  status_service.py  storage_service.py
apps/backend/src/utils/: __init__.py  hash.py
(+127 files in other folders)
