[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.1",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "instructor>=1.10.0",
    "openai>=1.98.0",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[tool.pyright]
include = ["src", "main.py"]
typeCheckingMode = "standard"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv.sources]
openai = { git = "https://github.com/wxxedu/openai-python-resume-genius.git" }

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyright>=1.1.403",
    "ruff>=0.12.11",
]
