[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "asyncpg>=0.30.0",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "dependency-injector>=4.48.1",
    "email-validator>=2.2.0",
    "executing==2.2.0",
    "fastapi>=0.116.1",
    "instructor>=1.10.0",
    "ipykernel==6.30.1",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "langfuse>=3.5.0",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "openai>=1.98.0",
    "packaging==25.0",
    "pandas>=2.3.2",
    "parso==0.8.4",
    "passlib[bcrypt]>=1.7.4",
    "pexpect==4.9.0",
    "pgvector>=0.4.1",
    "platformdirs==4.3.8",
    "playwright>=1.55.0",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "psycopg2-binary>=2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyzmq==27.0.1",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy>=2.0.42",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "uvicorn>=0.35.0",
    "wcwidth==0.2.13",
]

[tool.pyright]
include = ["src", "main.py"]
typeCheckingMode = "standard"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv.sources]
openai = { git = "https://github.com/wxxedu/openai-python-resume-genius.git" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "requests>=2.32.4",
    "ruff>=0.12.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["integration_tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
